# validator-cpf

./: README.md  generation.py  index.py  pyproject.toml  test.py  validation.py
src/: generation.py  index.py  validation.py
