[tool.poetry]
name = "pytest"
version = "0.1.0"
description = "exercicio de pytest"
authors = ["mateus-lopes <mateusalbano22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
